[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Animations/Narrator/WalkRight0000.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Animations/Narrator/WalkFront0000.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Animations/Narrator/WalkLeft0001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Animations/Narrator/WalkFront0001.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Animations/Narrator/WalkBack0000.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Animations/Narrator/WalkLeft0000.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Animations/Narrator/WalkRight0001.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Animations/Narrator/WalkBack0001.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Characters/Ennemy.gd" type="Script" id=10]
[ext_resource path="res://Scenes/UI/DialogBox.tscn" type="PackedScene" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "Back",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.0096, 23.0681 )

[node name="Ennemy" type="KinematicBody2D" groups=[
"Ennemy",
]]
collision_mask = 2
script = ExtResource( 10 )
DIALOG = [ [ "Wait, what ? Where did he go ?", "[shake rate=5 level=10]!!![/shake]", "[shake rate=5 level=10]HOW ?[/shake]" ], [ "Pleased to meet you, I am the narrator !", "[shake rate=5 level=10]AND YOU JUST BROKE MY GAME![/shake]", "[shake rate=5 level=10]WAS IT SO HARD TO SIMPLY KILL THESE SLIMES ???[/shake]" ], [ "Oh great, now i have to defeat you ...", "(I guess that's why i have this green thing over my head)" ], [ "Oh, that's probably the arrow keys ...", "[shake rate=5 level=10]WHY AM I HELPING YOU ?[/shake]" ], [ "Oh come on !", "It's obvious you can shoot fireballs with left mouse click !", "[shake rate=5 level=10]WHY AM I STILL HELPING YOU ???[/shake]", "Whatever, let's just end this ..." ] ]

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = -25.0
margin_top = -40.0
margin_right = -25.0
margin_bottom = -40.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Ennemy",
]]
position = Vector2( 0, -0.225937 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="DialogBox" parent="." instance=ExtResource( 11 )]
position = Vector2( -80, -130 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
